--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>WebSite of Philippe Monteagudo</h1>
-				<p>I am in the process of crating my blog/Internet Website to host anything and everything.<br />
-				Transient Drift is my current state of being... It is all i can say at this moment <a href="https://twitter.com/transient_drift">Felipe MOnteagudo</a>.</p>
+				<h1>WebSite of Felipe Monteagudo, AKA TRANSIENT-DRIFT</h1>
+				<p>I am in the process of craFting my blog/Internet Website to host anything and everything.<br />
+				Transient Drift is my current state of being... It is all i can say at this moment <a href="https://twitter.com/transient_drift">Transient-Drift</a>.</p>
 			</header>
 
 		<!-- Signup Form -->
@@ -28,11 +28,13 @@
 					<li><a href="https://twitter.com/transient_drift" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.instagram.com/transientfellow/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://oraculoml.github.io/Alchemy-AI/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:delberro@gmail.com?subject=Inquiries and Sales&CC=fmonteagudo@outlook.com">Haz click aqui para enviar un correo a Transient_Drift" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                    
+					<li><a href="mailto:monteagudo@outlook.com?subject=Inquiries and Sales&CC=fmonteagudo@outlook.com" class="icon fa-envelope"><span class="label">Haz click aqui para enviar un correo a Transient_Drif:Email</span></a></li>
 
+                    
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Untitled.</li><li>Credits: <a href="http://webfelipe.philippemonteagudo.org">Philippe Monteagudo</a></li>
 				</ul>
 			</footer>
 
